# TinyGCalc

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.bat  build.sh  flash.sh  pico_sdk_import.cmake
src/: BUILDING.md  main.c
src/core/: eqlist.c  eqlist.h  font6x8.c  font6x8.h  graph_utils.c  graph_utils.h  plotter.c  plotter.h  repl.c  repl.h  repl_serial.c  repl_serial.h  types.h  ui_eqedit.c  ui_eqedit.h  ui_graph.c  ui_graph.h  ui_text.c  ui_text.h
src/core/ui/: eqedit.c  eqedit.h  plot.c  plot.h  settings.c  settings.h  text.c  text.h
src/core/utils/: display.c  display.h  graph.c  graph.h  input.h  trig.c  trig.h
src/hal/: hal_display.h  hal_input.h  hal_serial.h  hal_time.h
src/platform/mock/: hal_display.c  hal_input.c  hal_serial.c  hal_time.c
src/platform/pico/: hal_display.c  hal_display_sh1106.c  hal_display_st7789.c  hal_input.c  hal_serial.c  hal_time.c
toolchain/: native.cmake
